brush-parser/src/parser/tests/snapshots/brush_parser__parser__tests__redirections__parse_io_number_out_of_range_does_not_panic.snap
---
source: brush-parser/src/parser/tests/redirections.rs
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "echo 99999999999999999999>&1",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "echo",
                  loc: "[location]",
                )),
                suffix: Some(CommandSuffix([
                  Word(Word(
                    value: "99999999999999999999",
                    loc: "[location]",
                  )),
                  IoRedirect(File(None, DuplicateOutput, Duplicate(Word(
                    value: "1",
                    loc: "[location]",
                  )))),
                ])),
              )),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
